--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header {
   padding-top: 16px;
   background-color: rgb(143, 143, 80);
   min-height: 100px;
+  margin-bottom: 50px;
 }
 
 header img {
@@ -49,18 +50,23 @@ header img {
 .HeaderBar {
   display: flex;
   align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .SearchBar {
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .SearchBar input {
   border-radius: 20px;
-  height: 25px;
-  width: 300px;  
+  height: 35px;
+  width: 300px;
+  padding-left: 12px;
 }
 
 main {
@@ -73,6 +79,12 @@ main {
   margin: 80px;
   height: 75vh;
   width: 90%;
+  max-width: 1440px;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .moreButton {
@@ -100,4 +112,10 @@ footer {
   padding-top: 10px;
   background-color: rgb(143, 143, 80);
   height: 60px;
+  margin-top: 120px;
+}
+
+.FooterLinks {
+  max-width: 1440px;
+  margin: 0 auto;  
 }
