--- a/style.css
+++ b/style.css
@@ -11,28 +11,27 @@
 }
 
 h2 {
-    margin-top: 4px;
-    font-size: 20px;
-    color: rgb(218 218 218 / 90%);
+  margin-top: 4px;
+  font-size: 20px;
+  color: rgb(218 218 218 / 90%);
 }
 body {
   margin: 0;
-  /* background-color: rgba(143, 143, 80, 0.719); */  
-  background-image: url(./img/icons/background.jpg);
-  background-size: cover;
-  background-position: center; 
-  
+  background-color: rgba(163, 163, 86, 0.719);
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 160px;
-  padding-top: 16px;
+  padding-left: -19px;
+  gap: 650px;
+  display: flex; 
   background-color: rgb(143, 143, 80);
-  min-height: 100px;
+  height: 75px;
   margin-bottom: 50px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 header img {
@@ -84,22 +83,26 @@ main {
   width: 150px;
   margin-top: 18px;
   border-radius: 20px;
-  background-color: rgba(164, 103, 0, 0.2);
+  background-color: rgb(143, 143, 80);
+  font-size: 16px;
 }
 
 .moreButton button:hover {
   scale: calc(1.1);
+  background-color: rgb(143, 143, 80, 0.8);
+  cursor: pointer;
 }
 
 footer {
   display: flex;
+
   justify-content: space-between;
   align-items: center;
   padding-inline: 160px;
   padding-top: 10px;
   background-color: rgb(143, 143, 80);
   height: 60px;
-  margin-top: 40px;
+  margin-top: 268px;
 }
 
 .FooterLinks {
