--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -1,11 +1,11 @@
 .OverlayContainer {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin: 0px;   
-    max-height: 910px;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin: 0px;
+
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .pokeCards {
@@ -22,57 +22,22 @@
   background-size: cover;
   background-position: center;
   border-radius: 7px;
-  
 }
 
 .pokeCards:hover {
   scale: calc(1.05);
+  cursor: pointer;
 }
 
 .pokeCards img:hover {
   animation: shake 2s;
   animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% {
-    transform: translate(1px, 1px) rotate(0deg);
-  }
-  10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    transform: translate(-3px, 0px) rotate(1deg);
-  }
-  30% {
-    transform: translate(3px, 2px) rotate(0deg);
-  }
-  40% {
-    transform: translate(1px, -1px) rotate(1deg);
-  }
-  50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
-  }
-  60% {
-    transform: translate(-3px, 1px) rotate(0deg);
-  }
-  70% {
-    transform: translate(3px, 1px) rotate(-1deg);
-  }
-  80% {
-    transform: translate(-1px, -1px) rotate(1deg);
-  }
-  90% {
-    transform: translate(1px, 2px) rotate(0deg);
-  }
-  100% {
-    transform: translate(1px, -2px) rotate(-1deg);
-  }
+  cursor: pointer;
 }
 
 .pokeCards img {
-    width: 130px;
-    height: auto;
+  width: 130px;
+  height: auto;
 }
 
 .PositionNumber {
@@ -96,61 +61,3 @@
   margin: 4px;
 }
 
-.type.normal {
-  background: #a8a77a;
-}
-.type.fire {
-  background: #ee8130;
-}
-.type.water {
-  background: #6390f0;
-}
-.type.electric {
-  background: #f7d02c;
-  color: #000;
-}
-.type.grass {
-  background: #7ac74c;
-}
-.type.ice {
-  background: #96d9d6;
-  color: #000;
-}
-.type.fighting {
-  background: #c22e28;
-}
-.type.poison {
-  background: #a33ea1;
-}
-.type.ground {
-  background: #e2bf65;
-  color: #000;
-}
-.type.flying {
-  background: #a98ff3;
-}
-.type.psychic {
-  background: #f95587;
-}
-.type.bug {
-  background: #a6b91a;
-}
-.type.rock {
-  background: #b6a136;
-}
-.type.ghost {
-  background: #735797;
-}
-.type.dragon {
-  background: #6f35fc;
-}
-.type.dark {
-  background: #705746;
-}
-.type.steel {
-  background: #b7b7ce;
-  color: #000;
-}
-.type.fairy {
-  background: #d685ad;
-}
