--- a/styles/pokemon.css
+++ b/styles/pokemon.css
@@ -1,3 +1,18 @@
+h2 {
+  margin-top: 4px;
+  font-size: 20px;
+  color: rgb(218 218 218 / 90%);
+  text-transform: capitalize;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+h2:hover {
+  animation: shake 2s;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+}
+
 .OverlayContainer {
   display: flex;
   justify-content: center;
@@ -18,16 +33,16 @@
   position: relative;
   height: 235px;
   width: 170px;
-  background-image: url(../img/icons/PokeCardBackground.png);
   background-size: cover;
   background-position: center;
   border-radius: 7px;
-  
 }
 
 .pokeCards:hover {
   scale: calc(1.05);
   cursor: pointer;
+  border: 2px solid #ccc;
+  box-shadow: 0 2px 5px rgba(209, 169, 169, 0.452);
 }
 
 .pokeCards img:hover {
@@ -37,8 +52,8 @@
 }
 
 .pokeCards img {
-    width: 130px;
-    height: auto;
+  width: 130px;
+  height: auto;
 }
 
 .PositionNumber {
@@ -48,7 +63,8 @@
   transform: translateX(-50%);
   font-size: 24px;
   padding-bottom: 12px;
-  color: rgb(218 218 218 / 90%);
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 .PokeElement {
   display: flex;
@@ -57,8 +73,18 @@
 .type {
   padding: 4px 10px;
   border-radius: 12px;
-  font-size: 14px;
+  border-style: solid;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.8);
+  border-color: rgba(109, 103, 97, 0.5);
+  font-size: 12px;
   color: white;
+  text-shadow: 2px 2px 4px #000000;
   margin: 4px;
 }
 
+.type:hover {
+  animation: shake 2s;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+}
