--- a/styles/pokemonTypes.css
+++ b/styles/pokemonTypes.css
@@ -30,14 +30,14 @@
 }
 .electric {
   background: var(--type-electric);
-  color: #000;
+  /* color: #000; */
 }
 .grass {
   background: var(--type-grass);
 }
 .ice {
   background: var(--type-ice);
-  color: #000;
+  /* color: #000; */
 }
 .fighting {
   background: var(--type-fighting);
@@ -47,7 +47,7 @@
 }
 .ground {
   background: var(--type-ground);
-  color: #000;
+  /* color: #000; */
 }
 .flying {
   background: var(--type-flying);
@@ -72,7 +72,7 @@
 }
 .steel {
   background: var(--type-steel);
-  color: #000;
+  /* color: #000; */
 }
 .fairy {
   background: var(--type-fairy);
