--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body:has(.example-dialog[open]) {
   overflow: hidden;
 }
 
-
 @font-face {
   font-family: "Lugarismo";
   src: url(./font/Lugrasimo/Lugrasimo-Regular.ttf);
@@ -113,14 +112,13 @@ main {
   cursor: pointer;
 }
 
-.NoPush{
-  pointer-events: disabled
+.NoPush {
+  pointer-events: disabled;
 }
 
-.dialogPosition{
+.dialogPosition {
   margin: auto;
 }
-
 
 footer {
   display: flex;
@@ -137,4 +135,43 @@ footer {
 .FooterLinks {
   max-width: 1440px;
   margin: 0 auto;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 10px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+#loading-spinner {  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#loading-spinner.hidden {
+  display: none;
 }
