--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ footer {
 
   justify-content: space-between;
   align-items: center;
-  padding-inline: 160px;
+ 
   padding-top: 10px;
   background-color: #006494;
   height: 60px;
@@ -160,7 +160,7 @@ footer {
   display: none;
 }
 
-#loading-spinner {  
+#loading-spinner {
   position: fixed;
   top: 0;
   left: 0;
@@ -175,3 +175,36 @@ footer {
 #loading-spinner.hidden {
   display: none;
 }
+
+@media (max-width: 750px) {
+
+  .HeaderBar { 
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+
+}
+
+@media (max-width: 360px) {
+
+  h1{
+    font-size: 35px;
+  }
+
+  header{
+    height: 55px;
+  }
+  header img {
+    width:45px;   
+}
+.SearchBar input {
+  width: 265px;
+}
+
+
+
+
+}
+
+
