--- a/styles/BigPokedexCard.css
+++ b/styles/BigPokedexCard.css
@@ -1,4 +1,6 @@
 dialog {
+  min-height: 550px;
+  min-width: 315px;
   border-style: none;
   border-radius: 18px;
 }
@@ -132,17 +134,25 @@ h4 {
 
 @media (max-width: 500px) {
   .bigPokemonImage {
-    width: 365px;
-    height: 320px;
+    width: 300px;
+    height: 300px;
+  }
+
+  h4 {
+    margin-top: -20px;
+    margin-bottom: 10px;
+    color: #333;
+    text-align: center;
+    font-size: 24px;
   }
 }
 
 @media (max-width: 390px) {
   h3 {
-    font-size: 24px;
+    font-size: 22px;
   }
   .PokeNumber {
-    font-size: 32px;
+    font-size: 24px;
   }
   h4 {
     font-size: 25px;
